--- a/mainbot/templates/mainbot/index.html
+++ b/mainbot/templates/mainbot/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="container pt-3 my-5 border">
-      <h5 class="mb-4">Please Enter Your Api Information</h5>
+      <h5 class="mb-4">Please Enter Your ApI Information</h5>
       <div class="input-group mb-3">
         <span class="input-group-text" style="width: 120px">API KEY</span>
         <input
