--- a/mainbot/templates/mainbot/index.html
+++ b/mainbot/templates/mainbot/index.html
@@ -105,7 +105,12 @@
           <button type="button" class="btn btn-primary" id="btn_stop">
             Stop
           </button>
-          <button type="button" class="btn btn-primary" id="btn_test">
+          <button
+            type="button"
+            class="btn btn-primary"
+            style="display: none"
+            id="btn_test"
+          >
             Test
           </button>
         </div>
